--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,23 @@
       <version>1.1.2</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.25</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.25</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>ca.krasnay</groupId>
+      <artifactId>sqlbuilder</artifactId>
+      <version>1.2</version>
+    </dependency>
+
   </dependencies>
 
   <reporting>
